--- a/ab.css
+++ b/ab.css
@@ -21,7 +21,7 @@ body
     font-size: 26px;
     font-weight: bold;
     padding: 50px;
-    margin-top: -350px;
+    margin-top: 0px;
 
 
 }
@@ -65,7 +65,7 @@ body
     direction: rtl;
 }
 .fap{
-    font-family: A KORDi,chiller;
+  
     font-weight: bold;
 }
 #ig{
@@ -136,7 +136,7 @@ body {
 header{
     background: linear-gradient(rgba(0,0,100,0.5),rgba(0,0,100,0.5)),url(2.jpg)  ;  
     background-size: cover;
-  
+  margin-left: 0;
 padding: 0%;
     margin-top: -20;
     background-position: center;
@@ -503,4 +503,16 @@ nav.mun{
     }
 }
 
+.ba{
 
+        
+    
+   
+    
+}
+
+
+#lm{
+    height: 100vh;
+    width: 400vh;
+}
